syntax = "proto3";
option java_multiple_files = true;
option java_package = "net.grpc.lib";
option java_outer_classname = "TokenProto";

service Token {
  rpc requestToken ( TokenRequest ) returns ( TokenReply ) {}
}

message TokenRequest {
  string id = 1;
  string password = 2;
}

message TokenReply {
  string accessToken=1;
  uint64 expiresIn=2;
}